# GrizzHacks8CTF

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  new-chal.sh
CTF_UI/: README.md  main.py  pyproject.toml  start.sh  wsgi.py
CTF_UI/ctfapp/: __init__.py  config.py  errors.py  extensions.py  headers.py  secure_log.py
CTF_UI/ctfapp/models/: __init__.py  challenge.py  event_log.py  instance.py  principal.py  submission.py  team.py  user.py
CTF_UI/ctfapp/security/: __init__.py  headers.py
CTF_UI/ctfapp/services/: anticheat.py  auth_service.py  event_service.py  flag_engine.py
CTF_UI/docs/superpowers/plans/: 2026-03-26-core-platform.md
CTF_UI/docs/superpowers/specs/: 2026-03-26-ctf-platform-design.md
Crypto/Bacon-Is-Back/: handout.txt
Crypto/Brutus/: README.md
Crypto/Circular/: README.md
Crypto/CocOracle/: README.md
Crypto/Duo-Circular/: README.md
Crypto/Exhibit-A/: README.md
Crypto/MicaliSchnorr/: README.md  chal.py  flag.txt  output.txt  solve.py
Crypto/SchrodingerSeed/: CHANGES.md  README.md
Crypto/Stego-Bacon-Oof/: README.md
Crypto/Twice-Padded/: README.md
Crypto/challenge2/: README.md
Crypto/challenge3/: README.md
Crypto/challenge4/: README.md
Crypto/challenge5/: README.md
Forensics/EZ-pcap/: README.md
Forensics/challenge1/: README.md
Rev-Pwn/orbital-salvage/: Cargo.toml  Dockerfile  Makefile  README.md  flag.txt
Rev-Pwn/orbital-salvage/handout/: README.md  challenge.txt  orbital-salvage
Rev-Pwn/orbital-salvage/solution/: requirements.txt  solve.py
Rev-Pwn/orbital-salvage/src/: main.rs
Web/: README.md
(+242 files in other folders)
